--- a/pages/intereses.html
+++ b/pages/intereses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Intereses personales</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="../Parcial2/styles/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/qze6hwe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
